--- a/Robert/edges_boxes.ipynb
+++ b/Robert/edges_boxes.ipynb
@@ -557,11 +557,12 @@
     "        os.makedirs(output_folder_path)\n",
     "    \n",
     "    counter = 1\n",
+    "    total = int(len(os.listdir(images_path))/2)\n",
     "    for image_filename in os.listdir(images_path):\n",
     "        if image_filename.endswith(\".jpg\"):\n",
     "            image_path = os.path.join(images_path, image_filename)\n",
     "            \n",
-    "            print(\"Processing:\", image_path)\n",
+    "            print(f\"Processing: {image_path}, {counter}/{total}              \", end='\\r')\n",
     "            \n",
     "            # Load the image\n",
     "            image = cv2.imread(image_path)\n",
@@ -575,10 +576,10 @@
     "            # Create XML file with proposals\n",
     "            create_xml_from_proposals(image_filename, edge_boxes_proposals, output_folder)\n",
     "\n",
-    "            print(f\"Generated XML for {image_filename} in {output_folder}\")\n",
+    "            #print(f\"Generated XML for {image_filename} in {output_folder}\")\n",
     "            counter += 1\n",
-    "            if counter > 1:\n",
-    "                break\n",
+    "            # if counter > 10:\n",
+    "            #     break\n",
     "generate_proposals_and_save_xml()"
    ]
   },
