Fixed dataloader and new proposals dataset.

--- a/Rasmus/Save_and_Label_SS.ipynb
+++ b/Rasmus/Save_and_Label_SS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "anno_path = \"../Potholes/annotated-images/\"\n",
     "# This does not scale. We should save annotation proposals in a file. \n",
     "\n",
-    "image_count = 10000\n",
+    "image_count = 1000\n",
     "\n",
     "files = os.listdir(img_path)\n",
     "\n",
@@ -41,18 +41,18 @@
     "images = [load_image(img_path + img) for img in image_paths[:image_count]]\n",
     "\n",
     "\n",
-    "IMAGE_WIDTH = 800\n",
-    "IMAGE_HEIGHT = 800\n",
+    "# IMAGE_WIDTH = 800\n",
+    "# IMAGE_HEIGHT = 800\n",
     "\n",
-    "IMAGE_SIZE = (IMAGE_WIDTH,IMAGE_HEIGHT)\n",
-    "boxes = [[resize_box(box, (image.shape[1], image.shape[0]), IMAGE_SIZE) for box in tmp_boxes] for (tmp_boxes,image) in zip(boxes,images)]\n",
-    "images = [cv2.resize(image, IMAGE_SIZE) for image in images]\n",
+    "# IMAGE_SIZE = (IMAGE_WIDTH,IMAGE_HEIGHT)\n",
+    "# boxes = [[resize_box(box, (image.shape[1], image.shape[0]), IMAGE_SIZE) for box in tmp_boxes] for (tmp_boxes,image) in zip(boxes,images)]\n",
+    "# images = [cv2.resize(image, IMAGE_SIZE) for image in images]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 665/665 [09:22<00:00,  1.18it/s]\n"
+      "100%|██████████| 665/665 [03:43<00:00,  2.98it/s]\n"
      ]
     }
    ],
@@ -76,16 +76,16 @@
     "    anno_path,\n",
     "    1200, \n",
     "    0.5,\n",
-    "    scale=5,\n",
-    "    sigma=0.6,\n",
-    "    min_size=200,\n",
-    "    image_shape=IMAGE_SIZE,\n",
-    "    count=len(images))"
+    "    scale=15,\n",
+    "    sigma=1.2,\n",
+    "    min_size=50,\n",
+    "    image_shape=None,\n",
+    "    count=image_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.6534"
+       "25.951"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,15 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# image_count = 5\n",
     "# for i in range(image_count):\n",
     "#     # Calculate scale_x and scale_y\n",
-    "#     scale_x = images[i].shape[1] / IMAGE_WIDTH\n",
-    "#     scale_y = images[i].shape[0] / IMAGE_HEIGHT \n",
+    "#     # scale_x = images[i].shape[1] \n",
+    "#     # scale_y = images[i].shape[0] \n",
+    "#     scale_x = 1\n",
+    "#     scale_y = 1 \n",
     "\n",
     "\n",
     "#     visualize_image(images[i], boxes[i], labels[i], proposal_boxes[i], scale_x=scale_x, scale_y=scale_y)"
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
