--- a/Samer/model_training.ipynb
+++ b/Samer/model_training.ipynb
@@ -23,10 +23,11 @@
    "outputs": [],
    "source": [
     "PROPOSAL_SIZE = (64, 64)\n",
+    "batch_size = 200\n",
     "\n",
-    "dataset_train = dataloader.PotholeDataset('../Potholes/annotated-images/', '../Potholes/proposals/', '../Potholes/annotated-images/', proposals_per_batch=5, proposal_size=PROPOSAL_SIZE, split='train')\n",
-    "dataset_val = dataloader.PotholeDataset('../Potholes/annotated-images/', '../Potholes/proposals/', '../Potholes/annotated-images/', proposals_per_batch=5, proposal_size=PROPOSAL_SIZE, split='val')\n",
-    "dataset_test = dataloader.PotholeDataset('../Potholes/annotated-images/', '../Potholes/proposals/', '../Potholes/annotated-images/', proposals_per_batch=5, proposal_size=PROPOSAL_SIZE, split='test')"
+    "dataset_train = dataloader.PotholeDataset('./Potholes/annotated-images/', './Potholes/proposals/', './Potholes/annotated-images/', proposals_per_batch=batch_size, proposal_size=PROPOSAL_SIZE, split='train')\n",
+    "dataset_val = dataloader.PotholeDataset('./Potholes/annotated-images/', './Potholes/proposals/', './Potholes/annotated-images/', proposals_per_batch=batch_size, proposal_size=PROPOSAL_SIZE, split='val')\n",
+    "dataset_test = dataloader.PotholeDataset('./Potholes/annotated-images/', './Potholes/proposals/', './Potholes/annotated-images/', proposals_per_batch=batch_size, proposal_size=PROPOSAL_SIZE, split='test')"
    ]
   },
   {
@@ -80,9 +81,7 @@
     "        train_loss = []\n",
     "        # for minibatch_no, (data, target) in tqdm(enumerate(dataset), total=len(dataset)):\n",
     "        for idx, (single_image_dict) in tqdm(enumerate(dataset_train), total=len(dataset_train)):\n",
-    "            # print(single_image_dict['labels'])\n",
     "            # for proposal, label, proposal_image in zip(single_image_dict['proposals'], single_image_dict['labels'], single_image_dict['proposal_images']):\n",
-    "            # print(label)\n",
     "            proposal_image, label = single_image_dict['proposal_images'].to(device), single_image_dict['labels'].to(device)\n",
     "            #Zero the gradients computed for each weight\n",
     "            optimizer.zero_grad()\n",
@@ -120,13 +119,13 @@
     "            predicted = output.argmax(1)\n",
     "            val_correct += (label_val==predicted).sum().cpu().item()\n",
     "\n",
-    "        out_dict['train_acc'].append(train_correct/len(dataset_train))\n",
-    "        out_dict['val_acc'].append(val_correct/len(dataset_val))\n",
+    "        out_dict['train_acc'].append(train_correct/len(dataset_train)/batch_size)\n",
+    "        out_dict['val_acc'].append(val_correct/len(dataset_val)/batch_size)\n",
     "        out_dict['train_loss'].append(np.mean(train_loss))\n",
     "        out_dict['val_loss'].append(np.mean(val_loss))\n",
     "\n",
     "        print(f\"Loss train: {np.mean(train_loss):.3f}\\t test: {np.mean(val_loss):.3f}\\t\",\n",
-    "              f\"Accuracy train: {out_dict['train_acc'][-1]*100/5:.1f}%\\t test: {out_dict['val_acc'][-1]*100/5:.1f}%\") # Dividing by 5 because of the batch_size\n",
+    "              f\"Accuracy train: {out_dict['train_acc'][-1]*100:.1f}%\\t test: {out_dict['val_acc'][-1]*100:.1f}%\") # Dividing by 5 because of the batch_size\n",
     "        \n",
     "    return out_dict"
    ]
@@ -140,152 +139,160 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10 [00:00<?, ?epoch/s]c:\\Users\\samer\\Documents\\Intro to deep learning for computer vision\\pothole_detector\\dataloader.py:153: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  0%|          | 0/10 [00:00<?, ?epoch/s]\n",
+      "  0%|          | 0/206 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[Ac:\\Users\\samer\\Documents\\Intro to deep learning for computer vision\\pothole_detector\\dataloader.py:153: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  labels = torch.tensor(labels[selected_indices])\n",
-      "100%|██████████| 206/206 [00:08<00:00, 23.30it/s]\n",
-      " 10%|█         | 1/10 [00:09<01:26,  9.59s/epoch]"
+      "100%|██████████| 206/206 [01:28<00:00,  2.32it/s]\n",
+      " 10%|█         | 1/10 [01:37<14:35, 97.24s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.427\t test: 0.426\t Accuracy train: 90.3%\t test: 89.5%\n"
+      "Loss train: 0.437\t test: 0.415\t Accuracy train: 82.2%\t test: 82.8%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 206/206 [00:06<00:00, 29.61it/s]\n",
-      " 20%|██        | 2/10 [00:17<01:07,  8.45s/epoch]"
+      "100%|██████████| 206/206 [01:27<00:00,  2.36it/s]\n",
+      " 20%|██        | 2/10 [03:13<12:52, 96.55s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.423\t test: 0.440\t Accuracy train: 89.6%\t test: 87.7%\n"
+      "Loss train: 0.419\t test: 0.414\t Accuracy train: 82.1%\t test: 82.6%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 206/206 [00:06<00:00, 30.00it/s]\n",
-      " 30%|███       | 3/10 [00:24<00:56,  8.04s/epoch]"
+      "100%|██████████| 206/206 [01:28<00:00,  2.34it/s]\n",
+      " 30%|███       | 3/10 [04:50<11:17, 96.76s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.397\t test: 0.448\t Accuracy train: 92.1%\t test: 86.8%\n"
+      "Loss train: 0.416\t test: 0.409\t Accuracy train: 82.0%\t test: 82.9%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 206/206 [00:07<00:00, 29.38it/s]\n",
-      " 40%|████      | 4/10 [00:32<00:47,  7.93s/epoch]"
+      "100%|██████████| 206/206 [01:28<00:00,  2.32it/s]\n",
+      " 40%|████      | 4/10 [06:28<09:43, 97.22s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.413\t test: 0.399\t Accuracy train: 90.5%\t test: 91.8%\n"
+      "Loss train: 0.414\t test: 0.410\t Accuracy train: 82.1%\t test: 82.7%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 206/206 [00:06<00:00, 29.73it/s]\n",
-      " 50%|█████     | 5/10 [00:40<00:39,  7.82s/epoch]"
+      "100%|██████████| 206/206 [01:28<00:00,  2.32it/s]\n",
+      " 50%|█████     | 5/10 [08:06<08:07, 97.55s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.402\t test: 0.403\t Accuracy train: 91.6%\t test: 91.4%\n"
+      "Loss train: 0.413\t test: 0.410\t Accuracy train: 82.2%\t test: 82.7%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 206/206 [00:06<00:00, 29.59it/s]\n",
-      " 60%|██████    | 6/10 [00:47<00:31,  7.77s/epoch]"
+      "100%|██████████| 206/206 [01:33<00:00,  2.21it/s]\n",
+      " 60%|██████    | 6/10 [09:50<06:38, 99.63s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.422\t test: 0.402\t Accuracy train: 89.5%\t test: 91.4%\n"
+      "Loss train: 0.415\t test: 0.411\t Accuracy train: 82.0%\t test: 82.6%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 206/206 [00:07<00:00, 29.38it/s]\n",
-      " 70%|███████   | 7/10 [00:55<00:23,  7.75s/epoch]"
+      "100%|██████████| 206/206 [01:43<00:00,  1.99it/s]\n",
+      " 70%|███████   | 7/10 [11:42<05:11, 103.98s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.421\t test: 0.422\t Accuracy train: 89.6%\t test: 89.5%\n"
+      "Loss train: 0.414\t test: 0.409\t Accuracy train: 82.0%\t test: 82.8%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 206/206 [00:07<00:00, 29.20it/s]\n",
-      " 80%|████████  | 8/10 [01:03<00:15,  7.77s/epoch]"
+      "100%|██████████| 206/206 [01:36<00:00,  2.13it/s]\n",
+      " 80%|████████  | 8/10 [13:29<03:29, 104.65s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.403\t test: 0.385\t Accuracy train: 91.5%\t test: 93.2%\n"
+      "Loss train: 0.413\t test: 0.410\t Accuracy train: 82.1%\t test: 82.7%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 206/206 [00:07<00:00, 29.14it/s]\n",
-      " 90%|█████████ | 9/10 [01:11<00:07,  7.77s/epoch]"
+      "100%|██████████| 206/206 [01:36<00:00,  2.14it/s]\n",
+      " 90%|█████████ | 9/10 [15:14<01:44, 104.99s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.424\t test: 0.439\t Accuracy train: 89.3%\t test: 87.7%\n"
+      "Loss train: 0.413\t test: 0.410\t Accuracy train: 82.1%\t test: 82.7%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 206/206 [00:06<00:00, 29.50it/s]\n",
-      "100%|██████████| 10/10 [01:18<00:00,  7.88s/epoch]"
+      "100%|██████████| 206/206 [01:33<00:00,  2.20it/s]\n",
+      "100%|██████████| 10/10 [16:57<00:00, 101.78s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.404\t test: 0.452\t Accuracy train: 91.4%\t test: 86.4%\n"
+      "Loss train: 0.413\t test: 0.409\t Accuracy train: 82.1%\t test: 82.8%\n"
      ]
     },
     {
@@ -298,46 +305,46 @@
     {
      "data": {
       "text/plain": [
-       "{'train_acc': [4.514563106796117,\n",
-       "  4.480582524271845,\n",
-       "  4.606796116504855,\n",
-       "  4.524271844660194,\n",
-       "  4.577669902912621,\n",
-       "  4.475728155339806,\n",
-       "  4.480582524271845,\n",
-       "  4.572815533980583,\n",
-       "  4.466019417475728,\n",
-       "  4.567961165048544],\n",
-       " 'val_acc': [4.4772727272727275,\n",
-       "  4.386363636363637,\n",
-       "  4.340909090909091,\n",
-       "  4.590909090909091,\n",
-       "  4.568181818181818,\n",
-       "  4.568181818181818,\n",
-       "  4.4772727272727275,\n",
-       "  4.659090909090909,\n",
-       "  4.386363636363637,\n",
-       "  4.318181818181818],\n",
-       " 'train_loss': [0.42712912354075794,\n",
-       "  0.423326759662443,\n",
-       "  0.3966262838215504,\n",
-       "  0.41252137706117725,\n",
-       "  0.4015305144983588,\n",
-       "  0.4218972374513311,\n",
-       "  0.4206112866262788,\n",
-       "  0.4031321796977404,\n",
-       "  0.4239137090236238,\n",
-       "  0.40367281726263105],\n",
-       " 'val_loss': [0.42559423026713455,\n",
-       "  0.43983467803760007,\n",
-       "  0.4482715278863907,\n",
-       "  0.3990793146870353,\n",
-       "  0.40325781364332547,\n",
-       "  0.4024789665233005,\n",
-       "  0.4217609390616417,\n",
-       "  0.38459455357356503,\n",
-       "  0.4387066052718596,\n",
-       "  0.4517950341105461]}"
+       "{'train_acc': [0.8215776699029127,\n",
+       "  0.8210679611650485,\n",
+       "  0.8200242718446602,\n",
+       "  0.8211407766990291,\n",
+       "  0.8216019417475728,\n",
+       "  0.8196116504854369,\n",
+       "  0.8202669902912622,\n",
+       "  0.8209708737864078,\n",
+       "  0.8209951456310679,\n",
+       "  0.8210679611650485],\n",
+       " 'val_acc': [0.8280681818181819,\n",
+       "  0.8260227272727273,\n",
+       "  0.8289772727272726,\n",
+       "  0.8273863636363636,\n",
+       "  0.8268181818181819,\n",
+       "  0.82625,\n",
+       "  0.8279545454545455,\n",
+       "  0.8270454545454545,\n",
+       "  0.8273863636363636,\n",
+       "  0.8276136363636364],\n",
+       " 'train_loss': [0.4371206039942584,\n",
+       "  0.4185764163153843,\n",
+       "  0.41646292487394465,\n",
+       "  0.41417044516906,\n",
+       "  0.41311233266464714,\n",
+       "  0.4147604938270976,\n",
+       "  0.4139543606818301,\n",
+       "  0.41314644793283595,\n",
+       "  0.41301094053439724,\n",
+       "  0.41297246602553767],\n",
+       " 'val_loss': [0.4150359366427768,\n",
+       "  0.41359441727399826,\n",
+       "  0.4089807021346959,\n",
+       "  0.4097648798064752,\n",
+       "  0.41002653539180756,\n",
+       "  0.41066586700352753,\n",
+       "  0.4089528342539614,\n",
+       "  0.4097812033512376,\n",
+       "  0.4095045890320431,\n",
+       "  0.40940282426097174]}"
       ]
      },
      "execution_count": 5,
