Fixed architecture to change in function of proposal size

--- a/Samer/model_training.ipynb
+++ b/Samer/model_training.ipynb
@@ -22,12 +22,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROPOSAL_SIZE = (64, 64)\n",
-    "batch_size = 200\n",
+    "PROPOSAL_SIZE = (128, 128)\n",
+    "BATCH_SIZE = 100\n",
+    "BALANCE = 0.5\n",
     "\n",
-    "dataset_train = dataloader.PotholeDataset('./Potholes/annotated-images/', './Potholes/proposals/', './Potholes/annotated-images/', proposals_per_batch=batch_size, proposal_size=PROPOSAL_SIZE, split='train')\n",
-    "dataset_val = dataloader.PotholeDataset('./Potholes/annotated-images/', './Potholes/proposals/', './Potholes/annotated-images/', proposals_per_batch=batch_size, proposal_size=PROPOSAL_SIZE, split='val')\n",
-    "dataset_test = dataloader.PotholeDataset('./Potholes/annotated-images/', './Potholes/proposals/', './Potholes/annotated-images/', proposals_per_batch=batch_size, proposal_size=PROPOSAL_SIZE, split='test')"
+    "dataset_train = dataloader.PotholeDataset('./Potholes/annotated-images/', './Potholes/proposals/', './Potholes/annotated-images/', proposals_per_batch=BATCH_SIZE, proposal_size=PROPOSAL_SIZE, balance=BALANCE, split='train')\n",
+    "dataset_val = dataloader.PotholeDataset('./Potholes/annotated-images/', './Potholes/proposals/', './Potholes/annotated-images/', proposals_per_batch=BATCH_SIZE, proposal_size=PROPOSAL_SIZE, balance=BALANCE, split='val')\n",
+    "dataset_test = dataloader.PotholeDataset('./Potholes/annotated-images/', './Potholes/proposals/', './Potholes/annotated-images/', proposals_per_batch=BATCH_SIZE, proposal_size=PROPOSAL_SIZE, balance=BALANCE, split='test')"
    ]
   },
   {
@@ -51,12 +52,12 @@
     "    if isinstance(m, nn.Conv2d) or isinstance(m, nn.Linear):\n",
     "        nn.init.xavier_uniform_(m.weight)\n",
     "\n",
-    "model = Network()\n",
+    "model = Network(proposal_size=PROPOSAL_SIZE)\n",
     "model.apply(init_weights)\n",
     "model.to(device)\n",
     "#Initialize the optimizer\n",
     "# optimizer = torch.optim.SGD(model.parameters(), lr=0.1)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.00001, weight_decay=0.1)"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001, weight_decay=0.1)"
    ]
   },
   {
@@ -119,8 +120,8 @@
     "            predicted = output.argmax(1)\n",
     "            val_correct += (label_val==predicted).sum().cpu().item()\n",
     "\n",
-    "        out_dict['train_acc'].append(train_correct/len(dataset_train)/batch_size)\n",
-    "        out_dict['val_acc'].append(val_correct/len(dataset_val)/batch_size)\n",
+    "        out_dict['train_acc'].append(train_correct/len(dataset_train)/BATCH_SIZE)\n",
+    "        out_dict['val_acc'].append(val_correct/len(dataset_val)/BATCH_SIZE)\n",
     "        out_dict['train_loss'].append(np.mean(train_loss))\n",
     "        out_dict['val_loss'].append(np.mean(val_loss))\n",
     "\n",
@@ -139,217 +140,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10 [00:00<?, ?epoch/s]\n",
-      "  0%|          | 0/206 [00:00<?, ?it/s]"
+      "  0%|          | 0/10 [00:00<?, ?epoch/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[Ac:\\Users\\samer\\Documents\\Intro to deep learning for computer vision\\pothole_detector\\dataloader.py:153: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "c:\\Users\\samer\\Documents\\Intro to deep learning for computer vision\\pothole_detector\\dataloader.py:137: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  labels = torch.tensor(labels[selected_indices])\n",
-      "100%|██████████| 206/206 [01:28<00:00,  2.32it/s]\n",
-      " 10%|█         | 1/10 [01:37<14:35, 97.24s/epoch]"
+      " 71%|███████   | 327/463 [01:02<00:26,  5.23it/s]\n",
+      "  0%|          | 0/10 [01:02<?, ?epoch/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.437\t test: 0.415\t Accuracy train: 82.2%\t test: 82.8%\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[4], line 36\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(model, optimizer, num_epochs)\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;66;03m#Update the weights\u001b[39;00m\n\u001b[0;32m     34\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m---> 36\u001b[0m train_loss\u001b[38;5;241m.\u001b[39mappend(\u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     37\u001b[0m \u001b[38;5;66;03m#Compute how many were correctly classified\u001b[39;00m\n\u001b[0;32m     38\u001b[0m predicted \u001b[38;5;241m=\u001b[39m output\u001b[38;5;241m.\u001b[39margmax(\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 206/206 [01:27<00:00,  2.36it/s]\n",
-      " 20%|██        | 2/10 [03:13<12:52, 96.55s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.419\t test: 0.414\t Accuracy train: 82.1%\t test: 82.6%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 206/206 [01:28<00:00,  2.34it/s]\n",
-      " 30%|███       | 3/10 [04:50<11:17, 96.76s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.416\t test: 0.409\t Accuracy train: 82.0%\t test: 82.9%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 206/206 [01:28<00:00,  2.32it/s]\n",
-      " 40%|████      | 4/10 [06:28<09:43, 97.22s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.414\t test: 0.410\t Accuracy train: 82.1%\t test: 82.7%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 206/206 [01:28<00:00,  2.32it/s]\n",
-      " 50%|█████     | 5/10 [08:06<08:07, 97.55s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.413\t test: 0.410\t Accuracy train: 82.2%\t test: 82.7%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 206/206 [01:33<00:00,  2.21it/s]\n",
-      " 60%|██████    | 6/10 [09:50<06:38, 99.63s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.415\t test: 0.411\t Accuracy train: 82.0%\t test: 82.6%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 206/206 [01:43<00:00,  1.99it/s]\n",
-      " 70%|███████   | 7/10 [11:42<05:11, 103.98s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.414\t test: 0.409\t Accuracy train: 82.0%\t test: 82.8%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 206/206 [01:36<00:00,  2.13it/s]\n",
-      " 80%|████████  | 8/10 [13:29<03:29, 104.65s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.413\t test: 0.410\t Accuracy train: 82.1%\t test: 82.7%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 206/206 [01:36<00:00,  2.14it/s]\n",
-      " 90%|█████████ | 9/10 [15:14<01:44, 104.99s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.413\t test: 0.410\t Accuracy train: 82.1%\t test: 82.7%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 206/206 [01:33<00:00,  2.20it/s]\n",
-      "100%|██████████| 10/10 [16:57<00:00, 101.78s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.413\t test: 0.409\t Accuracy train: 82.1%\t test: 82.8%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'train_acc': [0.8215776699029127,\n",
-       "  0.8210679611650485,\n",
-       "  0.8200242718446602,\n",
-       "  0.8211407766990291,\n",
-       "  0.8216019417475728,\n",
-       "  0.8196116504854369,\n",
-       "  0.8202669902912622,\n",
-       "  0.8209708737864078,\n",
-       "  0.8209951456310679,\n",
-       "  0.8210679611650485],\n",
-       " 'val_acc': [0.8280681818181819,\n",
-       "  0.8260227272727273,\n",
-       "  0.8289772727272726,\n",
-       "  0.8273863636363636,\n",
-       "  0.8268181818181819,\n",
-       "  0.82625,\n",
-       "  0.8279545454545455,\n",
-       "  0.8270454545454545,\n",
-       "  0.8273863636363636,\n",
-       "  0.8276136363636364],\n",
-       " 'train_loss': [0.4371206039942584,\n",
-       "  0.4185764163153843,\n",
-       "  0.41646292487394465,\n",
-       "  0.41417044516906,\n",
-       "  0.41311233266464714,\n",
-       "  0.4147604938270976,\n",
-       "  0.4139543606818301,\n",
-       "  0.41314644793283595,\n",
-       "  0.41301094053439724,\n",
-       "  0.41297246602553767],\n",
-       " 'val_loss': [0.4150359366427768,\n",
-       "  0.41359441727399826,\n",
-       "  0.4089807021346959,\n",
-       "  0.4097648798064752,\n",
-       "  0.41002653539180756,\n",
-       "  0.41066586700352753,\n",
-       "  0.4089528342539614,\n",
-       "  0.4097812033512376,\n",
-       "  0.4095045890320431,\n",
-       "  0.40940282426097174]}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
