Model 2 and fixes

--- a/Rasmus/model_training.ipynb
+++ b/Rasmus/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,18 +15,18 @@
     "sys.path.append('..')\n",
     "import module.dataloader as dataloader\n",
     "from tqdm import tqdm\n",
-    "\n",
-    "from model_architecture import Network"
+    "from model_architecture import Network\n",
+    "from model_architecture_improved import NetworkImproved, CustomCNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "PROPOSAL_SIZE = (128, 128)\n",
-    "BATCH_SIZE = 50\n",
+    "BATCH_SIZE = 100\n",
     "BALANCE = 0.5\n",
     "\n",
     "transform = transforms.Compose([\n",
@@ -40,7 +40,7 @@
     "\n",
     "normalize_only = transforms.Compose([\n",
     "    transforms.ToPILImage(),  # Convert NumPy array to PIL Image\n",
-    "    transforms.ToTensor(),    # Convert PIL Image to Tensor [0,1]\n",
+    "    transforms.ToTensor(),    # Convert PIL Image to Tensor [0,1]   \n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406],  # Normalize the tensor\n",
     "                       std=[0.229, 0.224, 0.225])\n",
     "])\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,16 +92,25 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(device)\n",
     "\n",
-    "def init_weights(m):\n",
-    "    if isinstance(m, nn.Conv2d) or isinstance(m, nn.Linear):\n",
-    "        nn.init.xavier_uniform_(m.weight)\n",
+    "def initialize_weights(model):\n",
+    "    for m in model.modules():\n",
+    "        if isinstance(m, nn.Conv2d):\n",
+    "            nn.init.kaiming_normal_(m.weight, mode='fan_out', nonlinearity='relu')\n",
+    "        elif isinstance(m, nn.BatchNorm2d) or isinstance(m, nn.BatchNorm1d):\n",
+    "            nn.init.constant_(m.weight, 1)\n",
+    "            nn.init.constant_(m.bias, 0)\n",
+    "        elif isinstance(m, nn.Linear):\n",
+    "            nn.init.xavier_normal_(m.weight)\n",
+    "            nn.init.constant_(m.bias, 0)\n",
+    "\n",
+    "\n",
     "\n",
     "model = Network(proposal_size=PROPOSAL_SIZE)\n",
-    "model.apply(init_weights)\n",
+    "model.apply(initialize_weights)\n",
     "model.to(device)\n",
     "#Initialize the optimizer\n",
     "# optimizer = torch.optim.SGD(model.parameters(), lr=0.1)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001, weight_decay=0.01)"
    ]
   },
   {
@@ -110,9 +119,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "def train(model, optimizer, num_epochs=10):\n",
+    "    lr_scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=1, gamma=0.1)\n",
+    "    \n",
+    "    \n",
     "    def loss_fun(output, target):\n",
-    "        return F.cross_entropy(output, target, reduction='mean', weight=torch.tensor([1.0, 2.0]).to(device))\n",
+    "        pos_weight = torch.tensor([4.0]).to(device)\n",
+    "        return F.binary_cross_entropy_with_logits(output, target, pos_weight=pos_weight)\n",
     "    \n",
     "    out_dict = {\n",
     "              'train_acc': [],\n",
@@ -128,6 +144,7 @@
     "        for idx, (single_image_dict) in tqdm(enumerate(train_loader), total=len(train_loader)):\n",
     "            # for proposal, label, proposal_image in zip(single_image_dict['proposals'], single_image_dict['labels'], single_image_dict['proposal_images']):\n",
     "            proposal_image, label = single_image_dict['proposal_images'][0].to(device), single_image_dict['labels'][0].to(device)\n",
+    "            label = label.unsqueeze(1).float()\n",
     "            #Zero the gradients computed for each weight\n",
     "            optimizer.zero_grad()\n",
     "            #Forward pass your image through the network\n",
@@ -141,10 +158,12 @@
     "\n",
     "            train_loss.append(loss.item())\n",
     "            #Compute how many were correctly classified\n",
-    "            output = nn.functional.softmax(output)\n",
-    "            predicted = output.argmax(1)\n",
-    "            train_correct += (label==predicted).sum().cpu().item()\n",
+    "            output = nn.functional.sigmoid(output)\n",
+    "            predicted = output > 0.5\n",
+    "            train_correct += (label==predicted).sum().cpu().item() / len(label)\n",
     "\n",
+    "        lr_scheduler.step()\n",
+    "        \n",
     "        #Comput the test accuracy\n",
     "        val_loss = []\n",
     "        val_correct = 0\n",
@@ -152,16 +171,18 @@
     "        for single_val_dict in val_loader:\n",
     "            # for proposal_val, label_val, proposal_image_val in zip(single_val_dict['proposals'], single_val_dict['labels'], single_val_dict['proposal_images']):\n",
     "            proposal_image_val, label_val = single_val_dict['proposal_images'][0].to(device), single_val_dict['labels'][0].to(device)\n",
+    "            label_val = label_val.unsqueeze(1).float()\n",
+    "            \n",
     "            with torch.no_grad():\n",
     "                output = model(proposal_image_val)\n",
     "\n",
     "            val_loss.append(loss_fun(output, label_val).cpu().item())\n",
-    "            output = nn.functional.softmax(output)\n",
-    "            predicted = output.argmax(1)\n",
-    "            val_correct += (label_val==predicted).sum().cpu().item()\n",
+    "            output = nn.functional.sigmoid(output)\n",
+    "            predicted = output > 0.5\n",
+    "            val_correct += (label_val==predicted).sum().cpu().item() / len(label_val)\n",
     "\n",
-    "        out_dict['train_acc'].append(train_correct/len(dataset_train)/BATCH_SIZE)\n",
-    "        out_dict['val_acc'].append(val_correct/len(dataset_val)/BATCH_SIZE)\n",
+    "        out_dict['train_acc'].append(train_correct/len(dataset_train))\n",
+    "        out_dict['val_acc'].append(val_correct/len(dataset_val))\n",
     "        out_dict['train_loss'].append(np.mean(train_loss))\n",
     "        out_dict['val_loss'].append(np.mean(val_loss))\n",
     "\n",
@@ -173,228 +194,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10 [00:00<?, ?epoch/s]/zhome/81/e/154648/repos/Object-Detection/Rasmus/../module/dataloader.py:144: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  labels = torch.tensor(labels[selected_indices], dtype=torch.long) # Class indices should be long for torch to work.\n",
-      "/zhome/81/e/154648/repos/Object-Detection/Rasmus/../module/dataloader.py:144: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  labels = torch.tensor(labels[selected_indices], dtype=torch.long) # Class indices should be long for torch to work.\n",
-      "\n",
-      "/zhome/81/e/154648/repos/Object-Detection/Rasmus/../module/dataloader.py:144: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  labels = torch.tensor(labels[selected_indices], dtype=torch.long) # Class indices should be long for torch to work./zhome/81/e/154648/repos/Object-Detection/Rasmus/../module/dataloader.py:144: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  labels = torch.tensor(labels[selected_indices], dtype=torch.long) # Class indices should be long for torch to work.\n",
-      "/tmp/ipykernel_2078153/2883346317.py:32: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  output = nn.functional.softmax(output)\n",
-      "100%|██████████| 463/463 [00:16<00:00, 28.93it/s]\n",
-      "/zhome/81/e/154648/repos/Object-Detection/Rasmus/../module/dataloader.py:144: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  labels = torch.tensor(labels[selected_indices], dtype=torch.long) # Class indices should be long for torch to work.\n",
-      "/tmp/ipykernel_2078153/2883346317.py:47: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  output = nn.functional.softmax(output)\n",
-      " 10%|█         | 1/10 [00:20<03:07, 20.79s/epoch]"
+      "100%|██████████| 463/463 [00:35<00:00, 13.09it/s]\n",
+      " 10%|█         | 1/10 [00:48<07:15, 48.34s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.450\t test: 1.139\t Accuracy train: 71.9%\t test: 57.6%\n"
+      "Loss train: 0.745\t test: 1.284\t Accuracy train: 76.5%\t test: 73.7%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 463/463 [00:16<00:00, 28.69it/s]\n",
-      " 20%|██        | 2/10 [00:41<02:47, 20.90s/epoch]"
+      "100%|██████████| 463/463 [00:36<00:00, 12.77it/s]\n",
+      " 20%|██        | 2/10 [01:37<06:29, 48.73s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.431\t test: 1.299\t Accuracy train: 72.8%\t test: 55.1%\n"
+      "Loss train: 0.660\t test: 1.256\t Accuracy train: 78.8%\t test: 76.0%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 463/463 [00:15<00:00, 28.99it/s]\n",
-      " 30%|███       | 3/10 [01:02<02:25, 20.84s/epoch]"
+      "100%|██████████| 463/463 [00:36<00:00, 12.83it/s]\n",
+      " 30%|███       | 3/10 [02:26<05:41, 48.79s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.439\t test: 1.434\t Accuracy train: 72.6%\t test: 57.8%\n"
+      "Loss train: 0.635\t test: 1.258\t Accuracy train: 79.4%\t test: 75.9%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 463/463 [00:16<00:00, 28.90it/s]\n",
-      " 40%|████      | 4/10 [01:23<02:04, 20.81s/epoch]"
+      "100%|██████████| 463/463 [00:36<00:00, 12.80it/s]\n",
+      " 40%|████      | 4/10 [03:15<04:53, 48.89s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.435\t test: 1.276\t Accuracy train: 72.4%\t test: 55.5%\n"
+      "Loss train: 0.635\t test: 1.378\t Accuracy train: 79.6%\t test: 76.1%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 463/463 [00:15<00:00, 29.08it/s]\n",
-      " 50%|█████     | 5/10 [01:44<01:43, 20.77s/epoch]"
+      "100%|██████████| 463/463 [00:36<00:00, 12.83it/s]\n",
+      " 50%|█████     | 5/10 [04:04<04:04, 48.91s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.425\t test: 1.003\t Accuracy train: 73.2%\t test: 58.6%\n"
+      "Loss train: 0.627\t test: 1.222\t Accuracy train: 79.5%\t test: 76.3%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 463/463 [00:16<00:00, 28.86it/s]\n",
-      " 60%|██████    | 6/10 [02:04<01:23, 20.79s/epoch]"
+      "100%|██████████| 463/463 [00:36<00:00, 12.72it/s]\n",
+      " 60%|██████    | 6/10 [04:53<03:16, 49.08s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.420\t test: 1.641\t Accuracy train: 73.6%\t test: 54.8%\n"
+      "Loss train: 0.629\t test: 1.261\t Accuracy train: 79.2%\t test: 75.6%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 463/463 [00:15<00:00, 29.02it/s]\n",
-      " 70%|███████   | 7/10 [02:25<01:02, 20.76s/epoch]"
+      "100%|██████████| 463/463 [00:35<00:00, 13.10it/s]\n",
+      " 70%|███████   | 7/10 [05:41<02:26, 48.85s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss train: 0.421\t test: 1.380\t Accuracy train: 73.7%\t test: 55.8%\n"
+      "Loss train: 0.632\t test: 1.219\t Accuracy train: 79.4%\t test: 75.5%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 463/463 [00:16<00:00, 28.76it/s]\n",
-      " 80%|████████  | 8/10 [02:46<00:41, 20.81s/epoch]"
+      "100%|██████████| 463/463 [00:35<00:00, 13.07it/s]\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.415\t test: 1.873\t Accuracy train: 74.0%\t test: 54.7%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 463/463 [00:16<00:00, 28.78it/s]\n",
-      " 90%|█████████ | 9/10 [03:07<00:20, 20.91s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.409\t test: 1.213\t Accuracy train: 73.9%\t test: 56.1%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 463/463 [00:16<00:00, 28.80it/s]\n",
-      "100%|██████████| 10/10 [03:28<00:00, 20.90s/epoch]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss train: 0.424\t test: 1.563\t Accuracy train: 73.7%\t test: 56.3%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'train_acc': [0.7189200863930886,\n",
-       "  0.7281209503239741,\n",
-       "  0.7263930885529157,\n",
-       "  0.7241900647948164,\n",
-       "  0.7315334773218143,\n",
-       "  0.7359827213822894,\n",
-       "  0.7367602591792657,\n",
-       "  0.7400431965442764,\n",
-       "  0.7390064794816414,\n",
-       "  0.7368898488120951],\n",
-       " 'val_acc': [0.5761616161616162,\n",
-       "  0.5507070707070707,\n",
-       "  0.5775757575757576,\n",
-       "  0.554949494949495,\n",
-       "  0.5860606060606061,\n",
-       "  0.5480808080808081,\n",
-       "  0.5577777777777778,\n",
-       "  0.5468686868686868,\n",
-       "  0.5612121212121213,\n",
-       "  0.5632323232323233],\n",
-       " 'train_loss': [0.4495132342141854,\n",
-       "  0.43061876235847596,\n",
-       "  0.43865889613365766,\n",
-       "  0.434578953934411,\n",
-       "  0.4252537651305322,\n",
-       "  0.42024923193210145,\n",
-       "  0.4210601620874961,\n",
-       "  0.4151010038270806,\n",
-       "  0.4093325950897281,\n",
-       "  0.4244507958159076],\n",
-       " 'val_loss': [1.1385483312787432,\n",
-       "  1.2992016257661763,\n",
-       "  1.433503128287166,\n",
-       "  1.275570178423265,\n",
-       "  1.0034209306191917,\n",
-       "  1.6413017074869136,\n",
-       "  1.3798924570131783,\n",
-       "  1.8726759173653342,\n",
-       "  1.2132604037872468,\n",
-       "  1.56289015469527]}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -407,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), 'pothole_detection_model.pth')"
+    "# torch.save(model.state_dict(), 'model_2.pth')"
    ]
   },
   {
